# shh

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  db.rs  main.rs  notify.rs
